--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -10,11 +10,12 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-image:url('../img/banner-img.jpg');
+        background-image:url('../img/banner-img1.jpg');
         background-color:rgba(255, 255, 255, 0.459);
         background-blend-mode: overlay;
         background-size: cover;
-        background-position: bottom -400px right 0px;        background-repeat: no-repeat;
+        background-position: bottom right;       
+        background-repeat: no-repeat;
         width: 100%;
         height: 100%;
         z-index: -1;
